--- a/index_src.html
+++ b/index_src.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
             content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,latin' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="build/css/style.min.css"/>
 
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="display: none">
-        <svg id="greeting" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg id="greeting" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                viewBox="0 0 187.663 44.918" enable-background="new 0 0 187.663 44.918"
              xml:space="preserve">
             <g>
@@ -31,7 +31,7 @@
                 <path fill="#81b3d2" d="M187.663,37.152v7.766h-20.896V0h20.896v7.7h-13.251v10.844h10.575v7.7h-10.575v10.908H187.663z"/>
             </g>
         </svg>
-        <svg id="to" version="1.0"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg id="to" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 255.917 28.91" enable-background="new 0 0 255.917 28.91" xml:space="preserve">
 <g>
 	<path d="M63.999,14.454l-0.202,0.23c-1.353,1.468-3.023,2.188-4.521,2.217l2.822-4.866c1.814-3.138,0.144-6.104-2.678-6.104
@@ -90,7 +90,7 @@
 <rect y="11.275" width="28.917" height="1.958"/>
 <rect x="227" y="11.275" width="28.918" height="1.958"/>
 </svg>
-		<svg version="1.0" id="title" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="title" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 459.755 79.804" enable-background="new 0 0 459.755 79.804"
 	 xml:space="preserve">
 <g>
@@ -110,7 +110,7 @@
 		h-0.199l-8.039,23.822h16.179L420.945,25.608z"/>
 </g>
 </svg>
-		<svg version="1.0" id="text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 293.826 79.393" enable-background="new 0 0 293.826 79.393"
 	 xml:space="preserve">
 <g>
@@ -263,15 +263,15 @@
 		s0.282-0.631,0.305-1.014c-0.653,0-1.229-0.192-1.726-0.576C271.158,67.115,270.909,66.562,270.909,65.842z"/>
 </g>
 </svg>
-<svg version="1.0" id="minus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="minus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="9.917px" height="1.917px" viewBox="0 0 9.917 1.917" enable-background="new 0 0 9.917 1.917" xml:space="preserve">
 <rect width="9.917" height="1.917"/>
 </svg>
-		<svg version="1.0" id="plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="9.917px" height="9.917px" viewBox="0 0 9.917 9.917" enable-background="new 0 0 9.917 9.917" xml:space="preserve">
 <polygon points="9.917,4 5.917,4 5.917,0 4,0 4,4 0,4 0,5.917 4,5.917 4,9.917 5.917,9.917 5.917,5.917 9.917,5.917 "/>
 </svg>
-		<svg version="1.0" id="calendar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="calendar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="19.875px" height="21.916px" viewBox="0 0 19.875 21.916" enable-background="new 0 0 19.875 21.916" xml:space="preserve">
 <g>
 	<path d="M17.04,2h-2.081V0h-2v2H6.917V0h-2v2H2.835C1.275,2,0,3.275,0,4.835v14.246c0,1.56,1.275,2.835,2.835,2.835H17.04
@@ -288,7 +288,7 @@
 	<rect x="8.938" y="14.942" width="2" height="2"/>
 </g>
 </svg>
-		<svg version="1.0" id="icon-twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="icon-twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
 <g id="W6EeEF_1_">
 	<g>
@@ -301,18 +301,18 @@
 	</g>
 </g>
 </svg>
-		<svg version="1.0" id="icon-facebook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="icon-facebook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
 <path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114
 	H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787
 	C5.765,5.069,5.75,3.709,6.275,3.356z"/>
 </svg>
-		<svg version="1.0" id="icon-youtube" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="icon-youtube" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
 <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835
 	C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
 </svg>
-		<svg version="1.0" id="icon-glukhanko" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="icon-glukhanko" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="25.988px" height="29.922px" viewBox="0 0 25.988 29.922" enable-background="new 0 0 25.988 29.922" xml:space="preserve">
 <path d="M0,0h25.988v29.922l-12.994-4.811L0,29.922V0z M20.154,17.895c-0.241,0-0.509-0.006-0.801-0.018
 	c-0.293-0.014-0.508-0.051-0.645-0.116c-0.225-0.103-0.391-0.26-0.5-0.469c-0.107-0.21-0.162-0.492-0.162-0.854
@@ -333,7 +333,7 @@
 	c-0.419,0-0.771-0.139-1.057-0.42c-0.287-0.282-0.43-0.738-0.43-1.363c0-0.475,0.084-0.888,0.254-1.238
 	c0.169-0.349,0.403-0.638,0.701-0.862c0.281-0.218,0.644-0.425,1.087-0.622c0.442-0.197,0.89-0.371,1.342-0.525L14.133,16.593z"/>
 </svg>
-		<svg version="1.0" id="icon-htmlacademy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg id="icon-htmlacademy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="26.096px" height="33.803px" viewBox="0 0 26.096 33.803" enable-background="new 0 0 26.096 33.803" xml:space="preserve">
 <g>
 	<path d="M13.047,0L0,1.456v24.475l13.047,7.835v0.037l13.049-7.872V1.558L13.047,0z M24.037,24.745l-10.989,6.622v-7.385
@@ -358,14 +358,14 @@
             </nav>
             <div class="logo">
                 <a href="index.html" class="logo__link">
-                    <img width="67" height="56" class="logo__img" src="build/img/logo-sedona@1x.png" srcset="build/img/logo-sedona@2x.png 2x" alt="лого"/>
-					<a href="#" class="menu--open"></a>
+                    <img width="67" height="56" class="logo__img" src="build/img/logo-sedona@1x.png" srcset="build/img/logo-sedona@2x.png 2x, build/img/logo-sedona@3x.png 3x" alt="лого"/>
                 </a>
+				<a href="#" class="menu--open"></a>
             </div>
         </header>
         <!-- Header -->
         <!-- Intro -->
-        <section class="intro">
+        <div class="intro">
             <svg class="intro__greeting--desktop"><use xlink:href="#greeting"></use></svg>
             <svg class="intro__greeting--mobile"><use xlink:href="#greeting"></use></svg>
             <svg class="intro__to intro__to--desktop"><use xlink:href="#to"></use></svg>
@@ -374,13 +374,13 @@
 			<svg class="intro__title intro__title--mobile"><use xlink:href="#title"></use></svg>
 			<svg class="intro__text intro__text--desktop"><use xlink:href="#text"></use></svg>
 			<svg class="intro__text intro__text--mobile"><use xlink:href="#text"></use></svg>
-			<section class="offer">
+			<div class="offer">
 				<div>
 					<h1 class="offer__title">Седона - небольшой городок в аризоне, заслуживающий большего!</h1>
 					<p class="offer__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
 				</div>
-			</section>
-        </section>
+			</div>
+        </div>
         <!-- Intro -->
 		<!-- Content -->
 		<div class="main-content">
@@ -510,7 +510,7 @@
 		</footer>
 		<!-- Footer -->
     </div>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP14n0X1wFFyNaDZvA4M0gD60FqmoMf6A&callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP14n0X1wFFyNaDZvA4M0gD60FqmoMf6A&amp;callback=initMap"></script>
 	<script src="build/js/script.min.js"></script>
 </body>
 </html>
