--- a/index_src.html
+++ b/index_src.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="build/css/style.min.css"/>
 
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <title>Sedona</title>
