edit google map

--- a/index_src.html
+++ b/index_src.html
@@ -258,7 +258,7 @@
 		</footer>
 		<!-- / Footer -->
     </div>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCP14n0X1wFFyNaDZvA4M0gD60FqmoMf6A&amp;callback=initMap"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 	<script src="build/js/script.min.js"></script>
 </body>
 </html>
