--- a/index_src.html
+++ b/index_src.html
@@ -9,8 +9,8 @@
 
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script src="build/js/libs/jquery-1.12.0.min.js"></script>
+	<script src="build/js/libs/jquery-ui.min.js"></script>
     <title>Sedona</title>
 </head>
 <body>
